# lazyfunc

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  docs.rst  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  deploy_docs.yml  docs.yml  pypi.yml  python-package.yml
docs/: README.md  explanation.md  index.md  reference.md
examples/photometrics/: data.txt  main.py
explanation/: index.html
reference/: index.html
src/lazyfunc/: __init__.py  arguments.py  lazy_func.py  operators.py  utils.py
src/mfunc/: __init__.py  math_func.py  operators.py  utils.py
test/: math_func.py
tests/: test_arguments.py  test_equations.py  test_lazy_func.py  test_lazy_func_decorator.py  test_lazy_func_operators.py  test_math_func.py  test_math_func_decorator.py  test_math_func_operators.py
